# CopyHistoryLinux

./: LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/copy_logic/: cblisten.rs  copy.rs
src/components/: Records.tsx  SearchBox.tsx  SliderButton.tsx
src/components/nav/: Nav.tsx
src/components/tabs/: Copy.tsx  Emoji.tsx  Settings.tsx  Symbol.tsx
src/layout/: AppTheme.tsx
src/types/: app.types.ts
src/utils/: RegisterShortcut.ts  emojidata.ts  globalshortcuts.ts  systemtray.ts  utils.ts
